--- a/templates/post.html
+++ b/templates/post.html
@@ -41,6 +41,17 @@
     <p> {{ post.content }}</p>
     {% endautoescape %}
     </div>
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.11&appId=544309092582572';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <div class="fb-comments" data-width="100%" data-numposts="5"></div>
   </div>
 </section>
 {% endblock %}
