--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -10,15 +10,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://use.fontawesome.com/001cd1aab4.js"></script>
   <link rel="stylesheet" href={% static "css/main.css" %}>
-
-  <!-- js -->
-  <script src="//code.jquery.com/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="{% static "js/main.js" %}"></script>
-
-  <!-- page specific -->
-  {% block resource %}
-  {% endblock %}
 </head>
 <body class="landing">
   <div class="container-fluid">
@@ -34,6 +25,15 @@
 
     <!-- footer -->
     {% include "base/_footer.html" %}
+
+    <!-- js -->
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="{% static "js/main.js" %}"></script>
+
+    <!-- page specific js -->
+    {% block javascript %}
+    {% endblock %}
   </div>
 </body>
 </html>
